compiler/tests/success/arm-m4/load_immediate.jazz
export
fn load_immediate() {
    reg u32 x;

    x = 0x000cb000; // This needs a MOV and a MOVT.
    [x] = x;
    x = 0x000acaca; // This needs a MOV and a MOVT.
    [x] = x;
}
