compiler/tests/fail/arm-m4/mov_imm_too_large.jazz
export
fn main(reg u32 x) {
    x = #MOV(0x000acaca);
    [x] = x;
}
